<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_weight="1.5">
        <ImageView
            android:id="@+id/imgmainLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/pause_main_logo"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txtless"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imgmainLogo"
                android:layout_below="@+id/imgmainLogo"
                android:paddingStart="3dp"
                android:layout_gravity="center_vertical"
                android:text="@string/lessanixity"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bullet" />

            <TextView
                android:id="@+id/txtmorehapiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imgmainLogo"
                android:layout_below="@+id/imgmainLogo"
                android:paddingEnd="2dp"
                android:text="@string/morehappinss"
                android:textColor="@color/textColor"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/txtTotoriafour" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="15dp"
                android:id="@+id/bullet1"
                android:src="@drawable/bullet"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/bullet1"
                android:id="@+id/txtbullet1"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/lessanixity"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:id="@+id/bullet2"
                android:layout_below="@+id/bullet1"
                android:src="@drawable/bullet"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_below="@+id/txtbullet1"
                android:layout_marginLeft="15dp"
                android:id="@+id/txtbullet2"
                android:layout_toEndOf="@+id/bullet2"
                android:text="@string/lessdepression"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/bullet2"
                android:id="@+id/bullet3"
                android:src="@drawable/bullet"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:id="@+id/txtbullet3"
                android:layout_below="@+id/txtbullet2"
                android:textSize="12sp"
                android:layout_toEndOf="@+id/bullet3"
                android:text="@string/moreSelfTime"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_below="@+id/bullet3"
                android:layout_marginTop="10dp"
                android:id="@+id/bullet4"
                android:src="@drawable/bullet" />
            <TextView
                android:textSize="12sp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtbullet3"
                android:layout_toEndOf="@+id/bullet4"
                android:text="@string/HappierPerson" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/frameLayout"
                android:background="@drawable/custom_button_border">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/btnnext"
                    android:background="@color/textColor"
                    android:text="@string/next" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:layout_gravity="start"
        android:layout_weight="2.5">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/pause_image_1" />
    </LinearLayout>

</LinearLayout>
