<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1.5">
        <ImageView
            android:id="@+id/imgmainLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/pause_main_logo"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txtless"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imgmainLogo"
                android:layout_below="@+id/imgmainLogo"
                android:paddingStart="3dp"
                android:layout_gravity="center_vertical"
                android:text="@string/lessanixity"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bullet" />

            <TextView
                android:id="@+id/txtmorehapiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imgmainLogo"
                android:layout_below="@+id/imgmainLogo"
                android:paddingEnd="2dp"
                android:text="@string/morehappinss"
                android:textColor="@color/textColor"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/txtTotorialthree"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_weight="1">
<!--<RelativeLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content">-->
    <!--<FrameLayout-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginRight="50dp"-->
        <!--android:background="@drawable/custom_button_border">-->
        <!--<Button-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:textColor="#ffffff"-->
            <!--android:background="@color/textColor"-->
            <!--android:text="@string/next" />-->
    <!--</FrameLayout>-->
<!--</RelativeLayout>-->

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="fill"
        android:layout_weight="2">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/pause_image_2" />
    </LinearLayout>


</LinearLayout>
